--- a/src/index.scss
+++ b/src/index.scss
@@ -49,7 +49,7 @@ $fontColorLogo: $brown4;
 $fontColorLanding: $gray4;
 $fontColorMain: $gray4;
 $fontColorLabel: lighten($gray4, 30%);
-$fontColorIconHeader: darken($gray4, 25%);
+$fontColorIconHeader: $coolwhite;
 $fontColorCode: $brown3;
 $fontColorHeader: $coolwhite;
 $fontColorButton: darken($brown4, 15%);
@@ -86,6 +86,23 @@ $insetShadow: lighten($coolgray3, 30%);
 $header-height: 50px;
 $quizLiHeight: 25px;
 $inputFieldWidth: 250px;
+
+$burgerIndex: 30;
+$headerZIndex: 50;
+$headerContentZIndex: 60;
+$modalMaskZIndex: 100;
+$modalZIndex: 101;
+$liTooltipZIndex: 200;
+
+
+$slide-speed: 1s;
+@mixin slide {
+	-webkit-transition: $slide-speed;
+	-moz-transition: $slide-speed;
+	-ms-transition: $slide-speed;
+	-o-transition: $slide-speed;
+	transition: $slide-speed;
+}
 
 /* @@@@@@@@@@@@@@  END VARIABLES - START RESET @@@@@@@@@@@@@@@@@@@@ */
 
@@ -208,18 +225,6 @@ main { // children are .about, .login, .profile, .dashboard, etc.
   margin: 5px;
 }
 
-.homeIcon {
-  position: absolute;
-  left: 0;
-  top: 0;
-}
-
-.settingsIcon {
-  position: absolute;
-  right: 0;
-  top: 0;
-}
-
 .faText {
   font-size: 11px; 
   font-family: 'Oxygen', sans-serif;
@@ -256,12 +261,6 @@ main { // children are .about, .login, .profile, .dashboard, etc.
 .smallIcon {
   font-size: 80%;
   margin-right: 5px;
-}
-
-header {
-  .fa {
-    color: $fontColorIconHeader;
-  }
 }
 
 /* @@@@@@@@@@@@@@ LANDING @@@@@@@@@@@@ */
@@ -301,20 +300,79 @@ header {
 
 /* @@@@@@@@@@@@@@@@ HEADER @@@@@@@@@@@@@@ */
 
-.header {
+.headerContainer {
   padding: 15px 5px;
   height: $header-height;
-  @include linear-gradient(60deg, lighten($headerColor, 10%), darken($headerColor, 10%));
-  -moz-box-shadow: 0px 4px 4px $shadow;
-  -webkit-box-shadow: 0px 4px 4px $shadow;
-  box-shadow: 0px 4px 4px $shadow;
   position: relative;
   width: 100%;
+  display: flex;
   h1 {
     font-size: 24px;
     color: $fontColorHeader;
     width: 100%;
   }
+}
+
+.header {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  position: absolute;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  top: 0;
+  left: 0;
+  z-index: $headerZIndex;
+  @include linear-gradient(60deg, lighten($headerColor, 10%), darken($headerColor, 10%));
+  -moz-box-shadow: 0px 4px 4px $shadow;
+  -webkit-box-shadow: 0px 4px 4px $shadow;
+  box-shadow: 0px 4px 4px $shadow;
+}
+
+.backIcon, .burgerIcon {
+  display: flex;
+  flex-direction: column;
+  color: $fontColorIconHeader;
+  height: $header-height;
+  width: $header-height;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 0;  
+}
+.burgerIcon {
+  right: 0;
+}
+.backIcon {
+  left: 0;
+}
+.burgerIcon {
+  right: 0;
+}
+.burgerMenu {
+  padding: 20px;
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: flex-start;
+  right: 0;
+  -webkit-transition: position 1s linear, -webkit-transform 1s linear;
+  transition: position 1s linear, transform 1s linear;
+  overflow: none;
+  @include slide;
+  z-index: $burgerIndex;
+  li {
+    margin-bottom: 10px;
+  }
+  border-radius: 0 0 6px 6px;
+}
+.burgerHide {
+  top: -350%;
+}
+.burgerShow {
+  top: 100%;
 }
 
 /* @@@@@@@@@@@@@@ BUTTONS @@@@@@@@@@@@ */
@@ -330,6 +388,9 @@ button {
 .enterButton, .loginButton, .submitButton {
   font-size: 35px;
 }
+.enterButton {
+  min-height: 55px;
+}
 .submitButton {
   margin-bottom: 0;
 }
@@ -337,6 +398,7 @@ button {
 .aboutButton, .createAccountButton, .gotoQuizListButton, 
 .checkAccuracyButton, .takeAnotherQuizButton {
   font-size: 20px;
+  min-height: 40px;
 }
 
 .gotoQuizListButton {
@@ -672,11 +734,11 @@ button {
   height: 100%;
   top: 0;
   left: 0;
-  z-index: 99;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  z-index: $modalMaskZIndex;
 }
 .modal {
   position: relative;
@@ -690,15 +752,17 @@ button {
   border: 2px solid $fontColorError;
   color: $fontColorError;
   border-radius: 4px;
-  z-index: 999;
+  z-index: $modalZIndex;
   .message {
     font-size: 24px;
     text-align: center;
+    // z-index: $modalZIndex;
   }
   .modalButton {
     position: absolute;
     top: 5px;
     right: 5px;
+    // z-index: $modalZIndex;
   }
 }
 
@@ -709,9 +773,10 @@ button {
   position: relative;
   .tooltipText {
     display: none;
-    position: absolute;
-    // width: 200%; //of the menu li SPA
     font-size: 12px;
+    text-align: left;
+    padding: 15px;
+    border-radius: 15px 0 15px 15px;
     td {
       font-size: 12px;
       padding: 2px;
@@ -719,26 +784,26 @@ button {
     h4 {
       margin-bottom: 4px;
     }
-    background-color: $tooltipBackgroundColor;
-    color: $fontColorTooltip;
-    text-align: left;
-    padding: 15px;
-    border-radius: 15px 0 15px 15px;
-    border: 1px solid $lines;
     top: 110%;
     right: 0;
-    z-index: 999;
     width: 200px;
-    -moz-box-shadow: 7px 7px 7px -5px $shadow;
-    -webkit-box-shadow: 7px 7px 7px -5px $shadow;
-    box-shadow: 7px 7px 7px -5px $shadow;
+    z-index: $liTooltipZIndex;    
   }
 }
 .tooltip:hover {
   .tooltipText {
     display: block;
   }
-} 
+}
+.popover {
+  position: absolute;
+  background-color: $tooltipBackgroundColor;
+  color: $fontColorTooltip;
+  border: 1px solid $lines;
+  -moz-box-shadow: 7px 7px 7px -5px $shadow;
+  -webkit-box-shadow: 7px 7px 7px -5px $shadow;
+  box-shadow: 7px 7px 7px -5px $shadow;
+}
 
 /* @@@@@@@@@@@@@@ GENERAL OVERRIDES @@@@@@@@@@@@ */
 
@@ -757,4 +822,8 @@ button {
 
 .inactive {
   color: $fontColorInactive;
+}
+
+.hidden {
+  display: none;
 }
