--- a/src/styles/_lists.scss
+++ b/src/styles/_lists.scss
@@ -4,140 +4,144 @@
   .quizListHeader {
     margin: 20px 0;
   }
-  .listItemTopLabel { // nested subclass for each label
-    position: absolute;
-    bottom: 38px;
-    left: 12px;
-    font-size: 12px;
-    color: $gray3;
-    -webkit-transform: rotate(-45deg);
-    -moz-transform: rotate(-45deg);
-    -ms-transform: rotate(-45deg);
-    -o-transform: rotate(-45deg);
-    -transform: rotate(-45deg);
-  }
-}
-.quizListContainer { // co-class of .dashboard and .quizMenu
-
   .quizList {
     display: flex;
     flex-direction: column;
     width: 100%;
     margin-top: 25px;
-  }
 
-  .listItem { // each line item, immediate parent is .quizList
-    align-items: center;
-    justify-content: space-between;
-    padding-bottom: 5px;
-    border-bottom: 1px solid $linesLight;
-    margin-bottom: 5px;
-    width: 100%;
-
-
-    .listItemName {
-      height: $listItemHeight;
-      width: 64%;
-      padding-left: 3%;
-      @media screen and (min-width: $portraitPhoneWide) {
-        padding-right: 10px;
-      }
-      display: flex;
-      align-items: center;
+    .listItemTopLabel { // nested subclass for each label
+      position: absolute;
+      bottom: 38px;
+      left: 12px;
+      font-size: 12px;
+      color: $gray3;
+      -webkit-transform: rotate(-45deg);
+      -moz-transform: rotate(-45deg);
+      -ms-transform: rotate(-45deg);
+      -o-transform: rotate(-45deg);
+      -transform: rotate(-45deg);
     }
-    .listItemDifficulty { 
-      width: $listItemHeight; // 11% at min of 320px
-      height: $listItemHeight;
-      font-size: 14px;
-      display: flex;
-      justify-content: center;
+    .listItem { // each line item, immediate parent is .quizList
       align-items: center;
-      border-radius: 50%;
-      border: 1px solid $linesLight;
-      -moz-box-shadow: 5px 5px 5px -4px $shadow;
-      -webkit-box-shadow: 5px 5px 5px -4px $shadow;
-      box-shadow: 5px 5px 5px -4px $shadow;
-      position: relative;
-      .listItemTopLabelDifficulty {
-
+      justify-content: space-between;
+      padding-bottom: 5px;
+      border-bottom: 1px solid $linesLight;
+      margin-bottom: 5px;
+      width: 100%;
+  
+  
+      .listItemName {
+        height: $listItemHeight;
+        width: 64%;
+        padding-left: 3%;
+        @media screen and (min-width: $portraitPhoneWide) {
+          padding-right: 10px;
+        }
+        display: flex;
+        align-items: center;
       }
-    } // end listItemDifficulty
-    // co-classes of .listItemDifficulty
-    .diff1{ background-color: $diff1Color; }
-    .diff2{ background-color: $diff2Color; }
-    .diff3{ background-color: $diff3Color; }
-    .diff4{ background-color: $diff4Color; }
-    .diff5{ background-color: $diff5Color; }
-
-    .listItemCategory {
-      height: $listItemHeight;
-      width: 22%;
-      font-size: 80%;
-      color: lighten($fontColorMain, 15%);
-      position: relative;
-      display: flex;
-      align-items: center;
-      padding-left: 5px;
-      .listItemTopLabelCategory {
-        left: 18px;
-      }
-      @media screen and (min-width: $portraitPhoneWide) {
-        padding-left: 10%;
+      .listItemDifficulty { 
+        width: $listItemHeight; // 11% at min of 320px
+        height: $listItemHeight;
+        font-size: 14px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 50%;
+        border: 1px solid $linesLight;
+        -moz-box-shadow: 5px 5px 5px -4px $shadow;
+        -webkit-box-shadow: 5px 5px 5px -4px $shadow;
+        box-shadow: 5px 5px 5px -4px $shadow;
+        position: relative;
+        .listItemTopLabelDifficulty {
+  
+        }
+      } // end listItemDifficulty
+      // co-classes of .listItemDifficulty
+      .diff1{ background-color: $diff1Color; }
+      .diff2{ background-color: $diff2Color; }
+      .diff3{ background-color: $diff3Color; }
+      .diff4{ background-color: $diff4Color; }
+      .diff5{ background-color: $diff5Color; }
+  
+      .listItemCategory {
+        height: $listItemHeight;
+        width: 22%;
+        font-size: 80%;
+        color: lighten($fontColorMain, 15%);
+        position: relative;
+        display: flex;
+        align-items: center;
+        padding-left: 5px;
         .listItemTopLabelCategory {
-          left: 30px;
+          left: 18px;
         }
-      }
-    } // end listItemCategory
-
-    .listItemScore { 
-      height: $listItemHeight;
-      width: 22%;
-      font-size: 80%;
-      color: lighten($fontColorMain, 15%);
-      position: relative;
-      display: flex;
-      align-items: center;
-      padding-left: 5px;
-      .listItemTopLabelScore {
-        left: 18px;
-      }
-      @media screen and (min-width: $portraitPhoneWide) {
-        padding-left: 10%;
+        @media screen and (min-width: $portraitPhoneWide) {
+          padding-left: 10%;
+          .listItemTopLabelCategory {
+            left: 30px;
+          }
+        }
+      } // end listItemCategory
+  
+      .listItemScore { 
+        height: $listItemHeight;
+        width: 22%;
+        font-size: 80%;
+        color: lighten($fontColorMain, 15%);
+        position: relative;
+        display: flex;
+        align-items: center;
+        padding-left: 5px;
         .listItemTopLabelScore {
-          left: 30px;
+          left: 18px;
         }
-      }
-    } // end listItemScore
-
-    .go { // subclass of .smallIcon
-      height: $listItemHeight;
-      width: 8%;
-      padding-right: 2%;
-      display: flex;
-      flex-direction: row;
-      align-items: center;
-      font-size: 24px;
-      &:hover {
-        color: $fontColorDarkHover;
-      }
-      .faText {
-        display: none;
-        @media screen and (min-width: $landscapePhone) {
-          display: flex;
+        @media screen and (min-width: $portraitPhoneWide) {
+          padding-left: 10%;
+          .listItemTopLabelScore {
+            left: 30px;
+          }
         }
-        font-size: 12px;
+      } // end listItemScore
+  
+      .go { // subclass of .smallIcon
+        height: $listItemHeight;
+        width: 8%;
+        padding-right: 2%;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        font-size: 24px;
         &:hover {
           color: $fontColorDarkHover;
         }
-      }
-    } // end go
-
-  } // end listItem
-
-  // @@@@@@@@ end quizList
-  .gotolistItemstButton {
-    width: 90%;
-    margin-left: 5%;
-    margin-right: 5%;
+        .faText {
+          display: none;
+          @media screen and (min-width: $landscapePhone) {
+            display: flex;
+          }
+          font-size: 12px;
+          &:hover {
+            color: $fontColorDarkHover;
+          }
+        }
+      } // end go
+  
+    } // end listItem
+  } // end quizList
+  .listSelectionButtons {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    .goToDashboardButton, .goToMenuButton {
+      font-size: 20px;
+      min-height: 40px;
+      flex-basis: 0;
+      flex-grow: 1;
+      margin-left: 5%;
+      margin-right: 5%;
+    }
   }
-} // end quizListContainer
+} 
